--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,12 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.6.8",
+    "electron": "^29.3.0",
+    "fs": "^0.0.1-security",
     "gsap": "^3.9.1",
     "normalize.css": "^8.0.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
